[update]: increased the width of the filter form, properly aligned its buttons and corrected its labels

--- a/src/components/filter-menu/filter-menu.scss
+++ b/src/components/filter-menu/filter-menu.scss
@@ -5,5 +5,12 @@
     background: #FFF;
     box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.04);
 
+    form {
+        width: 230px;
+
+        button {
+            height: 40px;
+        }
+    }
 
 }
